# zcash_voting

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  GENESIS.md  JOIN.md  LICENSE-MIT  Makefile  Package.swift  README.md  SETUP_CEREMONY.md  SETUP_GENESIS.md  SETUP_JOIN.md  ceremony.sh  genesis.json  go.mod  join-dev.sh  join.sh  mise.toml
.cursor/rules/: security-audit.mdc  sync-design.mdc  sync-zkp.mdc
.github/workflows/: audit.yml  caddy-deploy.yml  ci.yml  fund-validator.yml  imt-integration.yml  nullifier-ingest-deploy.yml  nullifier-ingest-resync.yml  release.yml  sdk-chain-deploy.yml  sdk-chain-reset.yml  vc-van-realism.yml  vote-commitment-tree.yml
.mise/tasks/: status
api/: codec.go  codec_test.go  handler.go  query_handler.go  tx_wrapper.go
app/: ante.go  app.go  app_config.go  decode.go
circuits/: Cargo.toml
circuits/include/: zally_circuits.h
circuits/src/: ffi.rs  lib.rs  redpallas.rs
circuits/tests/: generate_fixtures.rs
crypto/redpallas/: verify.go  verify_ffi.go
docs/: cosmos-sdk-messages-spec.md  handoff-e2e-testing.md  handoff-zashi-helper-server.md  handoff-zkp2-tx2-wiring.md  infra.md  mobile-voting-api.md  mobile-voting-architecture.md  voting-session-state-machine.md  zellic-ypir-audit-scope.md
docs/specs/: gov-steps-v1.md
e2e-tests/: Cargo.toml  VOTE_THROUGHPUT.md
e2e-tests/src/: api.rs  elgamal.rs  payloads.rs  setup.rs
e2e-tests/tests/: ceremony_bootstrap.rs  ceremony_flow.rs  voting_flow.rs  voting_flow_librustvoting.rs
helper-server/: Cargo.toml
helper-server/src/: api.rs  nullifier.rs  processor.rs  store.rs  types.rs
helper-server/tests/: integration.rs
imt-tree/: Cargo.toml
imt-tree/benches/: tree_build.rs
imt-tree/src/: proof.rs
keystone-qr/: Package.resolved  Package.swift  README.md
librustvoting/: Cargo.toml
librustvoting/src/: action.rs  decompose.rs  elgamal.rs  governance.rs  hotkey.rs  lib.rs  orchard_witnesses.rs  share_tracking.rs  types.rs  vote_commitment.rs  witness.rs  zkp1.rs  zkp2.rs
librustzcash/pczt/: Cargo.toml
nullifier-ingest/: .gitignore  Cargo.toml  Makefile  README.md
nullifier-ingest/docs/: deploy-setup.md  nullifier-query-server-opt.service  nullifier-query-server.service
nullifier-ingest/imt-tree/: Cargo.toml  README.md
nullifier-ingest/imt-tree/src/: hasher.rs  lib.rs  proof.rs  tree.rs
nullifier-ingest/imt-tree/tests/: imt_circuit_integration.rs
nullifier-ingest/nf-server/: Cargo.toml
nullifier-ingest/nf-server/src/: cmd_export.rs  cmd_ingest.rs  cmd_serve.rs  main.rs
nullifier-ingest/nf-server/src/serve/: handlers.rs  mod.rs  rebuild.rs  state.rs
nullifier-ingest/nullifier-tree/: Cargo.toml  Makefile  README.md
nullifier-ingest/nullifier-tree/src/: db.rs  download.rs  lib.rs  sync_nullifiers.rs  tree.rs
nullifier-ingest/pir-client/: Cargo.toml
nullifier-ingest/pir-client/src/: lib.rs
nullifier-ingest/pir-export/: Cargo.toml
nullifier-ingest/pir-export/src/: lib.rs  main.rs  tier0.rs  tier1.rs  tier2.rs
nullifier-ingest/pir-export/tests/: round_trip.rs
nullifier-ingest/pir-server/: Cargo.toml
nullifier-ingest/pir-server/src/: lib.rs  main.rs
nullifier-ingest/pir-test/: Cargo.toml
nullifier-ingest/pir-test/src/: main.rs
nullifier-ingest/pir-types/: Cargo.toml
nullifier-ingest/pir-types/src/: lib.rs
nullifier-ingest/service/: Cargo.toml
nullifier-ingest/service/src/: lib.rs  nc_root.rs  tree_db.rs
nullifier-ingest/service/tests/: api_integration.rs
nullifier-ingest/todo/: replace_sqlite_with_flat_files_b8e5b936.plan.md
nullifier-ingest/zcash-vote/: Cargo.toml
nullifier-ingest/zcash-vote/src/: db.rs  download.rs  lib.rs
orchard/: Cargo.toml
orchard/benches/: delegation.rs
orchard/src/: builder.rs  circuit.rs  keys.rs  lib.rs  note.rs  spec.rs
pir-client/: Cargo.toml
pir-export/: Cargo.toml
plans/: 0_init_plan.md  12_vote_tree_client-server_poc_c24eb944.plan.md  13_vote_tree_sdk_integration_901751c6.plan.md  15_ea_key_ceremony_keeper_9e78e72b.plan.md  18_threshold_decryption_design_d3f0020c.plan.md
proto/: buf.gen.yaml  buf.yaml
scripts/: ai-audit.sh  audit-prompt.md  release-xcframework.sh  remote-ceremony.sh
sdk/: Makefile  README.md  go.mod  go.sum
shielded_vote_generator_ui/: .env.example  .gitignore  package-lock.json  vercel.json  vite.config.ts
src/: action.rs  elgamal.rs  governance.rs  types.rs  vote_commitment.rs  zkp1.rs  zkp2.rs
vote-commitment-tree/: Cargo.toml  README.md
vote-commitment-tree-client/: Cargo.toml  README.md
vote-commitment-tree-client/src/: http_sync_api.rs  main.rs
vote-commitment-tree-client/tests/: mock_server_tests.rs
vote-commitment-tree/docs/: BRIDGE_TREE.md  ZCASH_NCT.md
vote-commitment-tree/src/: lib.rs  server.rs
vote-commitment-tree/tests/: client_server_integration.rs
zashi-ios/: .swiftlint.yml
zcash-voting-ffi/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md
zcash-voting-ffi/Sources/ZcashVotingFFI/: zcash_voting_ffi.swift  zcash_voting_ffiFFI.h  zcash_voting_ffiFFI.modulemap
zcash-voting-ffi/releases/zcash_voting_ffiFFI.xcframework/ios-arm64/zcash_voting_ffiFFI.framework/Headers/: zcash_voting_ffiFFI.h
zcash-voting-ffi/releases/zcash_voting_ffiFFI.xcframework/ios-arm64_x86_64-simulator/zcash_voting_ffiFFI.framework/Headers/: zcash_voting_ffiFFI.h
zcash-voting-ffi/releases/zcash_voting_ffiFFI.xcframework/ios-arm64_x86_64-simulator/zcash_voting_ffiFFI.framework/Modules/: module.modulemap
zcash-voting-ffi/releases/zcash_voting_ffiFFI.xcframework/macos-arm64_x86_64/zcash_voting_ffiFFI.framework/: Info.plist
zcash-voting-ffi/releases/zcash_voting_ffiFFI.xcframework/macos-arm64_x86_64/zcash_voting_ffiFFI.framework/Headers/: zcash_voting_ffiFFI.h
zcash-voting-ffi/rust/: Cargo.toml
zcash-voting-ffi/rust/src/: lib.rs
zcash-voting-ffi/support/: Info.plist
zcash_voting/: Cargo.toml  README.md
zcash_voting/src/: action.rs  governance.rs  lib.rs  orchard_compat.rs  tree_sync.rs  vote_commitment.rs  zkp1.rs  zkp2.rs
zcash_voting/src/storage/: mod.rs  queries.rs
zcash_voting/src/storage/migrations/: 001_init.sql
(+294 files in other folders)
