[workspace]
members = [
    "zcash_voting",
    "vote-commitment-tree",
    "vote-commitment-tree-client",
]
resolver = "2"

# Single-source patches for the orchard 0.13 + librustzcash zcash/main migration.
#
# - `orchard`: pin to the valargroup branch carrying orchard 0.13.0 plus the
#   cherry-picks tracked by valargroup/orchard PR #19:
#     * zcash/orchard PR #489 — SpendAuthG fixed-base multiplication, and
#     * zcash/orchard PR #495 — `NoteValue::ZERO` public associated constant.
#   The same pin is used by every downstream consumer so the entire dep graph
#   collapses to a single orchard node.
# - `voting-circuits`: pin to the matching valargroup branch (consumes the orchard
#   git pin above; published 0.2.0 still depends on the retired valar-orchard fork
#   and would create a duplicate orchard node in the graph).
# - `pczt` / `zcash_*` / `transparent`: pin to the upstream zcash/librustzcash
#   `main` HEAD now that all governance PRs (#2283, #2284, #2281) are merged
#   upstream — the valargroup/librustzcash fork is fully retired.
[patch.crates-io]
orchard = { git = "https://github.com/valargroup/orchard.git", branch = "valar/0.13-spend-auth-g" }
voting-circuits = { git = "https://github.com/valargroup/voting-circuits.git", branch = "valar/orchard-0.13" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
