[package]
name = "vote-commitment-tree"
version = "0.1.0"
edition = "2021"
description = "Append-only Poseidon Merkle tree for Vote Authority Notes and Vote Commitments in the Zcash shielded-voting protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/zcash_voting"
readme = "README.md"

[dependencies]
imt-tree = "0.1"
pasta_curves = "0.5"
ff = "0.13"
halo2_gadgets = { version = "0.3", default-features = false }
anyhow = "1.0"
incrementalmerkletree = "0.8.1"
shardtree = "0.6"
lazy_static = "1"
libc = "0.2"

[dev-dependencies]
rand = "0.8"
orchard = { version = "0.12.0", package = "valar-orchard" }
voting-circuits = "0.2.0"
