[package]
name = "zcash-voting-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
librustvoting = { path = "../librustvoting" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
orchard = "0.11"
zip32 = "0.2"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

# Speed up dev builds: parallel codegen + thin LTO.
[profile.release]
codegen-units = 16
lto = "thin"
