[package]
name = "zcash_voting"
version = "0.1.0"
edition = "2021"
description = "Client-side library for Zcash shielded voting: ZKP delegation and vote-commitment proofs (Halo 2), ElGamal encryption, governance PCZT construction, Merkle witness generation, and SQLite round-state persistence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/zcash_voting"
readme = "README.md"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PIR (private nullifier exclusion proofs)
pir-client = "0.1.0"

# Vote commitment tree (VAN witness generation)
vote-commitment-tree = { path = "../vote-commitment-tree", version = "0.1.0" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client", version = "0.1.0" }

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Single orchard node: every consumer (this crate, voting-circuits, and the
# librustzcash crates we pin below) resolves `orchard` through the workspace's
# `[patch.crates-io]` redirect to valargroup/orchard `valar/0.13-spend-auth-g`
# (orchard 0.13.0 + zcash/orchard PR #489). The `unstable-voting-circuits`
# feature is required by integration tests in `zkp1.rs` (`Note::new`,
# `Note::dummy`, `Rho::from_nf_old`).
subtle = "2.6"
orchard = { version = "0.13", features = ["unstable-voting-circuits"] }
voting-circuits = { version = "0.2.0", features = ["share-reveal"] }
nonempty = "0.11"
zip32 = "0.2"
incrementalmerkletree = "0.8"

# librustzcash pins — upstream zcash/librustzcash `main` HEAD. All governance
# PRs (#2283, #2284, #2281) that previously kept the valargroup fork alive are
# now merged upstream; bump this rev in lockstep when zcash/main advances.
zcash_protocol = "0.8"
zcash_keys = { version = "0.12", features = ["orchard"] }
pczt = { version = "0.5", features = ["orchard", "io-finalizer", "signer", "zcp-builder"] }
zcash_primitives = "0.27"
