[package]
name = "zcash_voting"
version = "0.1.1"
edition = "2021"
description = "Client-side library for Zcash shielded voting: ZKP delegation and vote-commitment proofs (Halo 2), ElGamal encryption, governance PCZT construction, Merkle witness generation, and SQLite round-state persistence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/zcash_voting"
readme = "README.md"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.4"
halo2_proofs = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PIR (private nullifier exclusion proofs)
pir-client = "0.1.0"

# Vote commitment tree (VAN witness generation)
vote-commitment-tree = { path = "../vote-commitment-tree", version = "0.1.1" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client", version = "0.1.1" }

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Single orchard node: every consumer resolves upstream `orchard` from
# crates.io at 0.13.1. The `unstable-voting-circuits` feature is required by
# integration tests in `zkp1.rs` (`Note::new`, `Note::dummy`,
# `Rho::from_nf_old`).
subtle = "2.6"
orchard = { version = "=0.13.1", features = ["unstable-voting-circuits"] }
voting-circuits = { version = "0.3.1", features = ["share-reveal"] }
nonempty = "0.11"
zip32 = "0.2"
incrementalmerkletree = "0.8"

zcash_protocol = "0.8"
zcash_keys = { version = "0.13", features = ["orchard"] }
pczt = { version = "0.6", features = ["orchard", "io-finalizer", "signer", "zcp-builder"] }
zcash_primitives = "0.27"
