[package]
name = "nf-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
serve = ["dep:pir-server", "dep:axum", "dep:tracing", "dep:tracing-subscriber", "dep:tower-http", "dep:reqwest"]
avx512 = ["serve", "pir-server/avx512"]

[dependencies]
# Serve-only (YPIR PIR server)
pir-server         = { path = "../pir-server", optional = true }
axum               = { version = "0.7", optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tower-http         = { version = "0.5", features = ["cors"], optional = true }
reqwest            = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Always needed
pir-export        = { path = "../pir-export" }
nullifier-service = { path = "../service" }
imt-tree          = { path = "../imt-tree" }
tokio             = { version = "1", features = ["rt-multi-thread", "macros"] }
clap              = { version = "4", features = ["derive", "env"] }
anyhow            = "1.0"
hex               = "0.4"
ff                = "0.13"
pasta_curves      = "0.5"
rayon             = "1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
