[package]
name = "pir-client"
version = "0.1.0"
edition = "2021"

[dependencies]
pir-export = { path = "../pir-export" }
imt-tree = { path = "../imt-tree" }
ypir = { git = "https://github.com/menonsamir/ypir.git", branch = "artifact", default-features = false }
hex = "0.4"
anyhow = "1.0"
ff = "0.13"
pasta_curves = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
