[package]
name = "pir-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pir-export = { path = "../pir-export" }
ypir = { git = "https://github.com/menonsamir/ypir.git", branch = "artifact", default-features = false, features = ["server", "explicit_avx512"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ff = "0.13"
pasta_curves = "0.5"
