[package]
name = "zcash-voting-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
librustvoting = { path = "../../librustvoting" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

# Keep this crate as a standalone workspace
[workspace]
